# hive

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_CODE_PROMPTS.md  README.md  README.zh-CN.md  TODOS.md  ai.puml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  providers.example.json  providers.schema.json  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts  workspace.json
.github/workflows/: ci.yml  release.yml
.hive/skills/: officecli.md  ppt-design.md
.omo/run-continuation/: ses_0bdacad0bffe2iyadvlQOh0nx9.json  ses_0bdc3da88ffeedr527k7IP521W.json  ses_0bdc3db75ffeaGCOHOpMQUB62X.json  ses_0bdc3dcf6ffeJ9YGkFBkwhj24k.json  ses_0bde0f2b7ffeajZrNnbz87sqjf.json  ses_0bdf139beffekXpDc9BYNCHqHQ.json  ses_0bdf139f3ffeJoliGOX47Z0qw3.json  ses_0bdf17068ffeHKduf7ppCVbNos.json  ses_0be15b6dbffebrVI0lGIGk3oZn.json  ses_0be195489ffezv2zc6Zi1yacQN.json  ses_0c256e498ffeZZKTB6kDxV0Pc3.json  (+15 more)
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  open_targets.rs
coverage/: coverage-final.json  index.html
docs/: INDEX.md  architecture.md  hooks-usage.md  vertical-pack.md
openspec/: config.yaml
scripts/: clean.mjs  copy-templates.mjs
src/: cli.ts  index.ts  server.ts
test-openclaw-plugin/: package-lock.json  package.json  test-adapter.cjs  test-adapter.mjs
tests/: index.test.ts  skills.test.ts
web/: index.html  package-lock.json  package.json  vite.config.ts
website/: package.json
(+1317 files in other folders)
