[package]
name = "hive"
version = "0.1.0"
description = "Hive - Multi-Agent Collaboration Framework"
authors = ["you"]
edition = "2021"

[lib]
name = "hive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "io-util", "rt", "sync", "macros"] }
reqwest = "0.12"

